fixes #768 - line-height clipped certain fonts glyphs

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -116,7 +116,7 @@
     border        : 1px solid $tags-border-color;
     border        : 1px solid var(--tags-border-color);
     padding       : 0;
-    line-height   : 1.1;
+    line-height   : normal;
     cursor        : text;
     outline       : none;
     position      : relative;
